Fix to z-index of preview pane

--- a/resources/public/stylesheets/cms/cms-stylesheet.css
+++ b/resources/public/stylesheets/cms/cms-stylesheet.css
@@ -964,6 +964,7 @@ li.pagination_link a {
   width: 95%;
   height:90%;
   background-color:white;
+  z-index:2000;
 }
 #preview_pane iframe {
   border:0;
